welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:9: error: '<-' expected but ')' found.
for ( dejafait != nbPas ) {
                        ^Program:14: error: illegal start of simple expression
	}
        ^